# Filoger

FFDEC_Dec23_Python_FinalProject_Saleh_Mohammad_Gholamzadeh/: 1-gettingInput.py  2-filePreproccessing.py  3-csvAnalysing.py  pyproject.toml  reportEN.md  requirements.txt
