[tool.poetry]
name = "finalproject"
version = "1.0.0"
description = ""
authors = ["saleh"]
license = "fanap"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jdatetime = "^4.1.1"
openpyxl = "^3.1.2"
faker = "^22.2.0"
python-dotenv = "^1.0.0"
numpy = "1.26.3"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
